--- a/1-Natours/package.json
+++ b/1-Natours/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server --port=8000",
+    "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
@@ -16,6 +18,7 @@
   "devDependencies": {
     "autoprefixer": "^8.4.1",
     "concat": "^1.0.3",
+    "live-server": "^1.2.0",
     "node-sass": "^4.8.3",
     "npm-run-all": "^4.1.2",
     "postcss-cli": "^5.0.0"
