--- a/1-Natours/package.json
+++ b/1-Natours/package.json
@@ -16,11 +16,12 @@
   "author": "Gareth Lyle",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^8.5.0",
     "concat": "^1.0.3",
     "live-server": "^1.2.0",
-    "node-sass": "^4.8.3",
-    "npm-run-all": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "postcss-cli": "^5.0.0"
-  }
+  },
+  "dependencies": {}
 }
